# AthenaLibraryAPI

./: .gitignore  README.md  main.py  pyproject.toml
decorators/: enhanced.py
src/domain/: aggregate_root.py  author.py  book.py  book_repository.py  entity.py  order.py
src/infra/: author.py  book.py  book_author.py  book_mapping.py  book_repository.py  book_schema.py  database.py  simple_approach.py
tests/: test_author.py  test_book.py  test_database_local.py
